Fixed a bug to allow the dark mode style to be visible on the video game page.

--- a/src/app/pages/video-games/video-games.component.scss
+++ b/src/app/pages/video-games/video-games.component.scss
@@ -618,7 +618,7 @@
 }
 
 // Dark Mode Styles
-.video-games-individual-container.dark-mode {
+.video-games-container.dark-mode {
   background-color: #1a1a1a;
   color: #e0e0e0;
 
